--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>JavaScript 1 Module 2 Lesson Task 1</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <div class="text"></div>
         <script src="js/script.js"></script>
     </body>
 </html>
